--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TargetTrackingExtension
+application.vendor=ben
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TargetTrackingExtension.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.networktables-desktop.jar=../../../../../../sunspotfrcsdk/desktop-lib/networktables-desktop.jar
 file.reference.opencv-248.jar=../SmartDashboard/smartdashboard/extensions/lib/opencv-248.jar
@@ -62,6 +64,7 @@ main.class=goaltrackingextension.GoalTrackingExtension
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=default_platform
 project.SmartDashboard=../SmartDashboard/smartdashboard
 reference.SmartDashboard.jar=${project.SmartDashboard}/dist/SmartDashboard.jar
