--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,9 @@ file.reference.opencv-248.jar=../SmartDashboard/smartdashboard/extensions/lib/op
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.SmartDashboard.jar}:\
+    ${file.reference.networktables-desktop.jar}:\
     ${file.reference.opencv-248.jar}:\
-    ${file.reference.networktables-desktop.jar}
+    ${reference.SmartDashboard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
