Add license header, update constants and make other tweaks.
* Add license headers
* Add small delay between each camera connection attempt
* Make IMAGE_SIZE final
* Make minor javadoc change
* Change MIN_FRAMES to 10
* Change MIN_HOT_FRAME_RATIO to 0.9
* Change MAX_HOT_FRAME_RATIO to 0.7
* Convert for-each loop to Stream.forEach and lambda

--- a/build.xml
+++ b/build.xml
@@ -74,9 +74,8 @@
     <target name="-post-jar">
         <copy file="${dist.jar}" todir="../SmartDashboard/smartdashboard/dist/extensions"/>
         <copy file="${dist.jar}" todir="../SmartDashboard/smartdashboard/extensions"/>
-    </target>
-    
-    <target name="run" depends="jar">
-        <java dir="../SmartDashboard/smartdashboard/dist" jar="../SmartDashboard/smartdashboard/dist/SmartDashboard.jar"/>
+        <copy todir="../SmartDashboard/smartdashboard/dist/extensions/lib">
+            <fileset dir="lib"/>
+        </copy>
     </target>
 </project>
