--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,21 +29,21 @@ dist.jar=${dist.dir}/TargetTrackingExtension.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.networktables-desktop.jar=../../../../../../sunspotfrcsdk/desktop-lib/networktables-desktop.jar
-file.reference.opencv-248.jar=../SmartDashboard/smartdashboard/extensions/lib/opencv-248.jar
+file.reference.networktables-desktop.jar=${var.sunspot.home}/desktop-lib/networktables-desktop.jar
+file.reference.opencv-249.jar=lib/opencv-249.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SmartDashboard.jar}:\
-    ${file.reference.opencv-248.jar}:\
+    ${file.reference.opencv-249.jar}:\
     ${file.reference.networktables-desktop.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=true
 javadoc.windowtitle=
-main.class=goaltrackingextension.GoalTrackingExtension
+main.class=edu.wpi.first.smartdashboard.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
