Add license files and remove debug prints from the Slider extension

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,6 +66,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
 platform.active=default_platform
+project.licensePath=./license-header.txt
 project.SmartDashboard=../SmartDashboard/smartdashboard
 reference.SmartDashboard.jar=${project.SmartDashboard}/dist/SmartDashboard.jar
 run.classpath=\
